--- a/css/style.css
+++ b/css/style.css
@@ -1,3 +1,43 @@
 body{
-  background-color: #d5e1ef;
+  background-color: hsl(212, 45%, 89%);
+  font-family: Outfit, sans-serif;
+  font-size: 15px;
+  min-height: 100vh;
+  margin: 0em;
+  display: flex;
+  justify-content: center; 
 }
+.card{
+  background-color: hsl(0, 0%, 100%);
+  margin: auto;
+  padding: 16px;
+  width: 288px;
+  height: 465px;
+  border-radius: 20px;
+  box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.05), 0 6px 30px 0 rgba(0, 0, 0, 0.05);
+  display: flex;
+  flex-direction: column;
+}
+.card__img img{
+  width: 100%;
+  border-radius: 10px;
+}
+.card__caption{
+  text-align: center;
+  margin: auto;
+  padding: 0.7em 1em  0.7em  1em ;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+}
+.card__title{
+  color: hsl(218, 44%, 22%);
+  font-weight: 700;
+  font-size: 1.5em;
+  margin: 0.3em 0em; 
+}
+.card__paragraph{
+  color: hsl(220, 15%, 55%);
+  margin: 0.5em 0em;
+} 
+
