--- a/css/style.css
+++ b/css/style.css
@@ -11,8 +11,8 @@ body{
   background-color: hsl(0, 0%, 100%);
   margin: auto;
   padding: 16px;
-  width: 288px;
-  height: 465px;
+  max-width: 288px;
+  max-height: 465px;
   border-radius: 20px;
   box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.05), 0 6px 30px 0 rgba(0, 0, 0, 0.05);
   display: flex;
