--- a/css/style.css
+++ b/css/style.css
@@ -17,8 +17,9 @@ body{
   box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.05), 0 6px 30px 0 rgba(0, 0, 0, 0.05);
   display: flex;
   flex-direction: column;
+  align-items: center;
 }
-.card__img img{
+.card__img{
   width: 100%;
   border-radius: 10px;
 }
